--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-csso": "^4.0.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
     "gulp-pug": "^4.0.1",
+    "gulp-rename": "^2.0.0",
     "gulp-rm": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sass-glob": "^1.1.0",
@@ -37,6 +39,8 @@
     "node-sass": "^5.0.0"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "D": "^1.0.0",
     "normalize.css": "^8.0.1",
     "svg4everybody": "^2.1.9"
   }
